[tool.poetry]
name = "geoguessrgpt"
version = "0.1.0"
description = ""
authors = ["Richard He <richard@openmart.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
requests = "^2.31.0"
openai = "^1.30.1"
exif = "^1.6.0"
piexif = "^1.1.3"
geocoder = "^1.38.1"
pycountry = "^23.12.11"
pycountry-convert = "^0.7.2"
streamlit-js-eval = "^0.1.7"
instructor = "^1.3.7"
xlsxwriter = "^3.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
